--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,35 @@
-.hero {
+.body {
   width: 100%;
 }
-.centered_oneline {
+#landingPage {
+  height: 100vh;
+  width: 100%;
+}
+.column {
   display: flex;
   justify-content: center;
   align-items: center;
+  align-content: center;
   flex-wrap: wrap;
   flex-direction: column;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.margintop8em {
+  margin-top: 10em;
+  width: 50%;
+}
+#newsletter {
+  width: 50%;
+}
+#sharing {
+  border: 1px solid blue;
 }
 .body {
   height: auto;
